# whisper-bench

./: .gitignore  README.md  config.py  main.py  performance_config.py  pyproject.toml  test_config.py  whisper_benchmark.py
benchmark_results/: benchmark_results_20250908_210051.json  benchmark_results_20250908_211116.json  benchmark_results_20250908_211301.json  benchmark_results_20250908_212805.json  benchmark_results_20250908_230346.json  benchmark_summary_20250908_210051.txt  benchmark_summary_20250908_211116.txt  benchmark_summary_20250908_211301.txt  benchmark_summary_20250908_212805.txt  benchmark_summary_20250908_230346.txt
benchmark_results/transcripts/faster_whisper/: 3-micklespickles_base.txt
benchmark_results/transcripts/lightning_whisper_mlx/: 3-micklespickles_base.txt
benchmark_results/transcripts/mlx_whisper/: 3-micklespickles_base.txt
benchmark_results/transcripts/whisper/: 3-micklespickles_base.txt
benchmarks/: __init__.py  base.py  faster_whisper.py  lightning_whisper_mlx.py  mlx_whisper.py  openai_whisper.py
mlx_models/base/: config.json
