[project]
name = "whisper-bench"
version = "0.1.0"
description = "Comprehensive Whisper model benchmarking and comparison tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper",
    "openai-whisper",
    "faster-whisper",
    "lightning-whisper-mlx",
    "librosa",
    "numpy",
    "soundfile>=0.13.1",
]
